--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+    padding: 0px;
+    margin: 0px;
+    width: 100vw;
+    height: 100vh;
+}
+.shadow {
+    box-shadow: 0 0.25rem 1rem rgba(48,55,66,.15);
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 4px;
+	background-color: transparent;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    //-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 2px;
+	background-color: transparent;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+	box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #5755d9;
+}
+
+/* Handle on hover */
+// ::-webkit-scrollbar-thumb:hover {
+
+// }
